@@ -120,6 +120,7 @@ SINGLE_GROUP(core,
     OCTSTR(dlr-storage)
     OCTSTR(maximum-queue-length)
     OCTSTR(sms-incoming-queue-limit)
+    OCTSTR(sms-outgoing-queue-limit)
     OCTSTR(sms-resend-freq)
     OCTSTR(sms-resend-retry)
 )
